--- a/de/briliniStudio.html
+++ b/de/briliniStudio.html
@@ -309,7 +309,7 @@
           <li><a href="#contentUs">Kontakt</a></li>
         </ul>
         <ul class="mediaInfo">
-          <li>Datenschutzbestimmungen</li>
+          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
           <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
         </ul>
       </div>
@@ -325,7 +325,7 @@
           <li><a href="#contentUs">Kontakt</a></li>
         </ul> -->
         <ul class="mediaInfo">
-          <li>Datenschutzbestimmungen</li>
+          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
           <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
         </ul>
       </div>
@@ -336,7 +336,7 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <li>Datenschutzbestimmungen</li>
+          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
           <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
         </ul>
       </div>
