--- a/de/home.html
+++ b/de/home.html
@@ -51,7 +51,7 @@
             src="../img/closeAction.svg"
             alt=""
           />
-          <ul>           
+          <ul>
             <!-- <li><a href="../de/home.html#">Held</a></li>
             <li><a href="../de/home.html#projects">Projekte</a></li>
             <li><a href="../de/home.html#services">Dienste</a></li>
@@ -78,12 +78,15 @@
               Bauen Sie die <span class="borderText">Zukunft</span> gemeinsam
               mit uns!
             </h2>
-            <img class="crlectImg" src="../img/select.svg" alt="" style="margin-left: -3vw;"/>
+            <img
+              class="crlectImg"
+              src="../img/select.svg"
+              alt=""
+              style="margin-left: -3vw"
+            />
             <p>Ihre Ziele sind unsere Umsetzung</p>
           </div>
-          <a class="buttonHeader" href="./email.html"
-            >Lass uns gehen!</a
-          >
+          <a class="buttonHeader" href="./email.html">Lass uns gehen!</a>
         </div>
       </section>
       <img class="imageHero" src="../img/deviderLine.svg" alt="" />
@@ -155,7 +158,9 @@
       </section>
 
       <section id="services">
-        <h2 class="servicesSection">Unser <span class="borderText">Dienstleistungen</span></h2>
+        <h2 class="servicesSection">
+          Unser <span class="borderText">Dienstleistungen</span>
+        </h2>
         <div class="servicesCards">
           <a href="./email.html">
             <div class="servicesFragment">
@@ -238,9 +243,7 @@
               <div class="contend">
                 <img class="linkTeams" src="../img/teams/socials.svg" alt="" />
                 <p class="slide-name">Andrey Alaverdian</p>
-                <p class="slide-description">
-                  Fotografin, Managerin
-                </p>
+                <p class="slide-description">Fotografin, Managerin</p>
               </div>
               <img class="imageBW" src="../img/SD/photo/andrey_bw.png" alt="" />
               <img class="imageC" src="../img/SD/photo/andrey_c.png" alt="" />
@@ -449,7 +452,6 @@
       </section>
     </main>
 
-
     <main class="tablet">
       <section class="hero heroSectionTablet">
         <img class="heroBackground" src="../img/Ellipse.svg" alt="" />
@@ -458,12 +460,15 @@
             <h2>
               Gemeinsam die <span class="borderText">Zukunft</span> bauen!
             </h2>
-            <img class="crlectImg" src="../img/select.svg" alt="" style="margin-left: 38.48vw;margin-top: 9.22vw;"/>
+            <img
+              class="crlectImg"
+              src="../img/select.svg"
+              alt=""
+              style="margin-left: 38.48vw; margin-top: 9.22vw"
+            />
             <p>Ihre Ziele sind unsere Umsetzung</p>
           </div>
-          <a class="buttonHeader" href="./email.html">
-            Lass uns gehen!</a
-          >
+          <a class="buttonHeader" href="./email.html"> Lass uns gehen!</a>
         </div>
       </section>
       <img class="imageHero" src="../img/deviderLine.svg" alt="" />
@@ -608,9 +613,7 @@
               <div class="contend">
                 <img class="linkTeams" src="../img/teams/socials.svg" alt="" />
                 <p class="slide-name">Timur Mazepa</p>
-                <p class="slide-description">
-                  Front-End-Entwickler
-                </p>
+                <p class="slide-description">Front-End-Entwickler</p>
               </div>
               <img class="imageBW" src="../img/SD/photo/timur_bw.png" alt="" />
               <img class="imageC" src="../img/SD/photo/timur_c.png" alt="" />
@@ -619,9 +622,7 @@
               <div class="contend">
                 <img class="linkTeams" src="../img/teams/socials.svg" alt="" />
                 <p class="slide-name">Andrey Alaverdian</p>
-                <p class="slide-description">
-                  Fotografin, Managerin
-                </p>
+                <p class="slide-description">Fotografin, Managerin</p>
               </div>
               <img class="imageBW" src="../img/SD/photo/andrey_bw.png" alt="" />
               <img class="imageC" src="../img/SD/photo/andrey_c.png" alt="" />
@@ -652,9 +653,7 @@
               <div class="contend">
                 <img class="linkTeams" src="../img/teams/socials.svg" alt="" />
                 <p class="slide-name">Sakhanda Nazar</p>
-                <p class="slide-description">
-                  Front-End-Entwickler
-                </p>
+                <p class="slide-description">Front-End-Entwickler</p>
               </div>
               <img class="imageBW" src="../img/SD/photo/nazar_bw.png" alt="" />
               <img class="imageC" src="../img/SD/photo/nazar_c.png" alt="" />
@@ -778,7 +777,12 @@
           </div>
         </div>
       </section>
-      <img class="imageHero" src="../img/deviderLine.svg" alt="" style="margin-bottom: 0;"/>
+      <img
+        class="imageHero"
+        src="../img/deviderLine.svg"
+        alt=""
+        style="margin-bottom: 0"
+      />
 
       <section id="contentUs">
         <div class="adoutUs">
@@ -828,11 +832,9 @@
       </section>
 
       <img class="imageHero" src="../img/deviderLine.svg" alt="" />
-
     </main>
 
     <main class="mobile">
-
       <section class="hero">
         <img class="heroBackground" src="../img/Ellipse.svg" alt="" />
         <div class="heroBlock">
@@ -840,11 +842,14 @@
             <h2>
               Gemeinsam die <span class="borderText">Zukunft</span> bauen!
             </h2>
-            <img class="crlectImg" src="../img/select.png" alt="" style="width: 59.53vw;"/>
+            <img
+              class="crlectImg"
+              src="../img/select.png"
+              alt=""
+              style="width: 59.53vw"
+            />
           </div>
-          <a class="buttonHeader" href="./email.html">
-            Lass uns gehen!</a
-          >
+          <a class="buttonHeader" href="./email.html"> Lass uns gehen!</a>
         </div>
       </section>
       <img class="imageHero" src="../img/deviderLine.svg" alt="" />
@@ -910,10 +915,21 @@
           <!-- <img class="projectButton" src="../img/left.svg" alt="" /> -->
         </div>
       </section>
-      <img class="imageHero" src="../img/deviderLine.svg" alt="" style="margin-top: 0;"/>
+      <img
+        class="imageHero"
+        src="../img/deviderLine.svg"
+        alt=""
+        style="margin-top: 0"
+      />
 
       <section id="services">
-        <h2>Unser <span class="borderText">Dienstle <br/> istungen</span></h2>
+        <h2>
+          Unser
+          <span class="borderText"
+            >Dienstle <br />
+            istungen</span
+          >
+        </h2>
         <div class="servicesCards">
           <a href="./email.html">
             <div class="servicesFragment servicesFragmentAnimationMobaile1">
@@ -965,7 +981,12 @@
           </a>
         </div>
       </section>
-      <img class="imageHero" src="../img/deviderLine.svg" alt="" style="margin-top: 0;"/>
+      <img
+        class="imageHero"
+        src="../img/deviderLine.svg"
+        alt=""
+        style="margin-top: 0"
+      />
 
       <section id="ourTeam">
         <div class="slider-name">
@@ -987,7 +1008,7 @@
                 <p class="slide-name">Timur Mazepa</p>
                 <p class="slide-description">
                   Front-End
-                   <br />
+                  <br />
                   Entwickler
                 </p>
               </div>
@@ -998,9 +1019,7 @@
               <div class="contend">
                 <img class="linkTeams" src="../img/teams/socials.svg" alt="" />
                 <p class="slide-name">Andrey Alaverdian</p>
-                <p class="slide-description">
-                 Fotografin, Managerin
-                </p>
+                <p class="slide-description">Fotografin, Managerin</p>
               </div>
               <img class="imageBW" src="../img/SD/photo/andrey_bw.png" alt="" />
               <img class="imageC" src="../img/SD/photo/andrey_c.png" alt="" />
@@ -1033,7 +1052,7 @@
                 <p class="slide-name">Sakhanda Nazar</p>
                 <p class="slide-description">
                   Front-End
-                   <br />
+                  <br />
                   Entwickler
                 </p>
               </div>
@@ -1165,7 +1184,12 @@
           </div>
         </div>
       </section>
-      <img class="imageHero" src="../img/deviderLine.svg" alt="" style="margin-top: 0;"/>
+      <img
+        class="imageHero"
+        src="../img/deviderLine.svg"
+        alt=""
+        style="margin-top: 0"
+      />
 
       <section id="contentUs">
         <div class="adoutUs">
@@ -1179,15 +1203,15 @@
           <a class="contentUsBtn" href="./email.html">Contact</a>
         </div>
         <div class="peoples">
-          <div class="group peopleBlue" style="margin-top: -118vw;">
+          <div class="group peopleBlue" style="margin-top: -118vw">
             <img src="../img/group/CursorBlue.svg" alt="" />
             <p>Dmytro</p>
           </div>
-          <div class="group peopleRed" style="margin-top: -109vw;">
+          <div class="group peopleRed" style="margin-top: -109vw">
             <img src="../img/group/CursorRed.svg" alt="" />
             <p>Timur</p>
           </div>
-          <div class="group peopleGreen" style="margin-top: -118vw;">
+          <div class="group peopleGreen" style="margin-top: -118vw">
             <img src="../img/group/CursorGreen.svg" alt="" />
             <p>Serhii</p>
           </div>
@@ -1203,7 +1227,7 @@
             <img src="../img/group/CursorOrange.svg" alt="" />
             <p>Natasha</p>
           </div>
-          <div class="group peopleLightPink" style="margin-top: -109vw;">
+          <div class="group peopleLightPink" style="margin-top: -109vw">
             <img src="../img/group/CursorLightPink.svg" alt="" />
             <p>Nazar</p>
           </div>
@@ -1226,7 +1250,9 @@
           <li><a href="#contentUs">kontaktiere uns</a></li>
         </ul>
         <ul class="mediaInfo">
-          <li>Datenschutzrichtlinie</li>
+          <li>
+            <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
+          </li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
@@ -1241,7 +1267,11 @@
           <li><a href="#contentUs">kontaktiere uns</a></li>
         </ul> -->
         <ul class="mediaInfo">
-          <li>Datenschutzrichtlinie</li>
+          <li>
+            <a href="../de/privacy.html" style="text-decoration: underline"
+              >Datenschutzrichtlinie</a
+            >
+          </li>
           <li>© 2023 Alle Rechte vorbehalten.</li>
         </ul>
       </div>
@@ -1251,8 +1281,15 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <li>Datenschutzrichtlinie</li>
-          <li><br> © 2023  Alle  Rechte vorbehalten.</li>
+          <li>
+            <a href="../de/privacy.html" style="text-decoration: underline"
+              >Datenschutzrichtlinie</a
+            >
+          </li>
+          <li>
+            <br />
+            © 2023 Alle Rechte vorbehalten.
+          </li>
         </ul>
       </div>
       <img
@@ -1271,7 +1308,11 @@
     <script src="../js/app.js"></script>
     <script src="../js/table/table.js"></script>
     <script src="../js/mobileDE/mobileDe.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
-      <script src="../js/SmoothScroll.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"
+      integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco="
+      crossorigin="anonymous"
+    ></script>
+    <script src="../js/SmoothScroll.js"></script>
   </body>
 </html>
