--- a/de/abi.html
+++ b/de/abi.html
@@ -325,7 +325,7 @@
           <li><a href="#contentUs">Kontakt</a></li>
         </ul>
         <ul class="mediaInfo">
-          <li>Datenschutzbestimmungen</li>
+          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
           <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
         </ul>
       </div>
@@ -340,7 +340,7 @@
           <li><a href="#contentUs">Kontakt</a></li>
         </ul>
         <ul class="mediaInfo">
-          <li>Datenschutzbestimmungen</li>
+          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
           <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
         </ul>
       </div>
@@ -350,7 +350,7 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <li>Datenschutzbestimmungen</li>
+          <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
           <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
         </ul>
       </div>
