--- a/de/organicShop.html
+++ b/de/organicShop.html
@@ -346,7 +346,7 @@
           <li><a href="#contentUs">Kontakt</a></li>
         </ul>
         <ul class="mediaInfo">
-          <li>Datenschutzbestimmungen</li>
+                       <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
           <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
         </ul>
       </div>
@@ -361,7 +361,7 @@
           <li><a href="#contentUs">Kontakt</a></li>
         </ul> -->
         <ul class="mediaInfo">
-          <li>Datenschutzbestimmungen</li>
+        <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
           <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
         </ul>
       </div>
@@ -371,7 +371,7 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <li>Datenschutzbestimmungen</li>
+   <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
           <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
         </ul>
       </div>
