--- a/de/whiteCollar.html
+++ b/de/whiteCollar.html
@@ -341,7 +341,7 @@
           <li><a href="#contentUs">Kontakt</a></li>
         </ul>
         <ul class="mediaInfo">
-          <li>Datenschutzbestimmungen</li>
+         <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
           <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
         </ul>
       </div>
@@ -357,7 +357,7 @@
           <li><a href="#contentUs">Kontakt</a></li>
         </ul> -->
         <ul class="mediaInfo">
-          <li>Datenschutzbestimmungen</li>
+         <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
           <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
         </ul>
       </div>
@@ -368,7 +368,7 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <li>Datenschutzbestimmungen</li>
+         <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
           <li>© 2020 Lift media. Alle Rechte vorbehalten.</li>
         </ul>
       </div>
