--- a/en/abi.html
+++ b/en/abi.html
@@ -316,7 +316,7 @@
           <li><a href="#contentUs">Contact</a></li>
         </ul>
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+          <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
@@ -331,7 +331,7 @@
           <li><a href="#contentUs">Contact</a></li>
         </ul>
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+          <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
@@ -341,7 +341,7 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+          <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
