--- a/en/briliniStudio.html
+++ b/en/briliniStudio.html
@@ -300,7 +300,7 @@
           <li><a href="#contentUs">Contact</a></li>
         </ul>
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+          <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
@@ -315,7 +315,7 @@
           <li><a href="#contentUs">Contact</a></li>
         </ul> -->
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+          <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
@@ -325,7 +325,7 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+          <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
