--- a/en/home.html
+++ b/en/home.html
@@ -1183,7 +1183,7 @@
           <li><a href="#contentUs">Contact us</a></li>
         </ul>
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+          <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
@@ -1198,7 +1198,7 @@
           <li><a href="#contentUs">Contact us</a></li>
         </ul> -->
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+                    <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
@@ -1208,7 +1208,7 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+                    <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
