--- a/en/organicShop.html
+++ b/en/organicShop.html
@@ -330,7 +330,11 @@
           <li><a href="#contentUs">Contact</a></li>
         </ul>
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+          <li>
+            <a href="../en/privacy.html" style="text-decoration: underline"
+              >Privacy Policy</a
+            >
+          </li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
@@ -345,7 +349,11 @@
           <li><a href="#contentUs">Contact</a></li> -->
         </ul>
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+          <li>
+            <a href="../en/privacy.html" style="text-decoration: underline"
+              >Privacy Policy</a
+            >
+          </li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
@@ -355,7 +363,11 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+          <li>
+            <a href="../en/privacy.html" style="text-decoration: underline"
+              >Privacy Policy</a
+            >
+          </li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
