--- a/en/pagesShop.html
+++ b/en/pagesShop.html
@@ -322,7 +322,7 @@
           <li><a href="#contentUs">Contact</a></li>
         </ul>
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+                    <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
@@ -337,7 +337,7 @@
           <li><a href="#contentUs">Contact</a></li>
         </ul> -->
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+                    <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
@@ -347,7 +347,7 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+                    <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
