--- a/en/whiteCollar.html
+++ b/en/whiteCollar.html
@@ -342,7 +342,7 @@
           <li><a href="#contentUs">Contact</a></li>
         </ul>
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+                    <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
@@ -357,7 +357,7 @@
           <li><a href="#contentUs">Contact</a></li>
         </ul> -->
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+                    <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
@@ -367,7 +367,7 @@
       <img class="logo" src="../img/logo.svg" alt="" />
       <div class="footerInfo">
         <ul class="mediaInfo">
-          <li>Privacy Policy</li>
+                    <li><a href="../en/privacy.html" style="text-decoration: underline">Privacy Policy</a></li>
           <li>© 2023 All rights reserved.</li>
         </ul>
       </div>
