--- a/en/privacy.html
+++ b/en/privacy.html
@@ -62,7 +62,7 @@
       </div>
     </header>
     <main>
-      <section id="organicShop" class="organicShopAnimation">
+      <section id="organicShop" style="margin-top: 2.5vw">
         <h3>Privacy <span class="borderText">Policy</span></h3>
         <ul class="privacyText">
           <li>
@@ -80,6 +80,44 @@
             <p>
               <span>Data</span> is any information that is directly or
               indirectly related to the users of the website.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section id="organicShop">
+        <h3>Personal <span class="borderText">Data</span></h3>
+        <ul class="privacyText">
+          <li>
+            <div class="lineBeforeLi"></div>
+            <p>Full name, phone number, e-mail address.</p>
+          </li>
+          <li>
+            <div class="lineBeforeLi"></div>
+            <p>User information when contracting services on the website.</p>
+          </li>
+          <li>
+            <div class="lineBeforeLi"></div>
+            <p>
+              Data on devices and their use: IP address, time, date of use of
+              the website by the user, software, as well as browser, operating
+              system and other data revealed by the user.
+            </p>
+          </li>
+          <li>
+            <div class="lineBeforeLi"></div>
+            <p>
+              Data from surveys related to improving the provision of services
+              to users; information obtained by the website as a result of
+              marketing activities.
+            </p>
+          </li>
+          <li>
+            <div class="lineBeforeLi"></div>
+            <p>
+              Information posted by users based on the results of their service,
+              feedback, comments, support requests, complaints, grievances and
+              other inquiries.
             </p>
           </li>
         </ul>
