--- a/en/privacy.html
+++ b/en/privacy.html
@@ -122,54 +122,221 @@
           </li>
         </ul>
       </section>
+
+      <section id="organicShop">
+        <h3>
+          Use of cookies and
+          <span class="borderText">
+            <br />
+            Other technology</span
+          >
+        </h3>
+        <ul class="privacyText">
+          <li>
+            <p>
+              <span>Cookies</span> or <span>cookies</span> are small pieces of
+              data that are sent to the user's computer when you visit a web
+              page or view an advertising module on a web page and are stored on
+              the user's computer or mobile device.
+            </p>
+          </li>
+          <li>
+            <p>
+              <span>Pixels</span> or <span>pixel tags</span> are digital images,
+              an element of the ad matrix that form the image. They can be used
+              to track how often a user uses a web page, to identify the user's
+              browser and provide services. For example, storing data in the
+              shopping cart between visits, and preventing user-initiated
+              website errors, with all information processed "as is" and not
+              modified during the data collection process.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section id="organicShop">
+        <h3>
+          Use and purposes of
+          <span class="borderText">
+            <br />
+            Data processing
+          </span>
+        </h3>
+        <ul class="privacyText">
+          <li>
+            <p>
+              The Website uses and processes data to perform the functions,
+              powers and duties assigned to the Website in accordance with the
+              <span>current legislation of</span> <span>Ukraine</span> and to
+              ensure the realization of civil, economic and tax relations.
+            </p>
+          </li>
+          <li>
+            <p>
+              <span
+                >The website does not process data relating to race,
+                nationality, political opinions, religious and other beliefs or
+                membership of public associations. Information about the
+                physiological characteristics of the user, which can be used to
+                identify him/her, is not processed.</span
+              >
+            </p>
+          </li>
+          <li>
+            <p>
+              The conditions of data processing and storage are determined on
+              the basis of the purposes of data processing, as well as on the
+              basis of the conditions established in the contracts concluded
+              with users, in accordance
+              <span>
+                with the requirements of the current legislation of Ukraine.
+              </span>
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section id="organicShop">
+        <h3>
+          Conditions of granting
+          <span class="borderText">
+            <br />
+            access to data
+          </span>
+        </h3>
+        <ul class="privacyText">
+          <li>
+            <p>
+              Data will not be transferred to third parties or disseminated
+              without the consent of the user, except in cases provided for
+              <span>by applicable Ukrainian law</span> and only in the interests
+              of national security, economic well-being and human rights, in
+              particular but not exclusively:
+            </p>
+          </li>
+          <li>
+            <div class="lineBeforeLi"></div>
+            <p>
+              Upon reasonable requests from public authorities authorized to
+              request and receive such data.
+            </p>
+          </li>
+          <li>
+            <div class="lineBeforeLi" style="margin-top: 1.3vw; width: 21px;"></div>
+            <p>
+              In case the user, in the opinion of the site administration,
+              violates the provisions of this policy or other contracts and
+              agreements concluded between the site and the user, as well as the
+              provisions of the user agreement.
+            </p>
+          </li>
+          <li>
+            <p>
+              The website reserves the right to exchange data with state
+              authorities in accordance with the requirements
+              <span>of the current legislation of Ukraine</span> to prevent
+              fraud on the website, settle disputes and clarify circumstances
+              that may lead to a violation of the current legislation of
+              Ukraine.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section id="organicShop">
+        <h3>
+          Data protection in
+          <span class="borderText">
+            <br />
+            SD Production
+          </span>
+        </h3>
+        <ul class="privacyText">
+          <li>
+            <p>
+              Applies the necessary technical, organisational and legal measures
+              during data processing to protect data from unauthorised or
+              unlawful access, including modification, deletion, provision,
+              distribution and other unlawful acts.
+            </p>
+          </li>
+          <li>
+            <p>
+              The site shall continuously monitor the security measures taken.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section id="organicShop">
+        <h3>
+          Additional
+          <span class="borderText">
+            <br />
+            Terms
+          </span>
+        </h3>
+        <ul class="privacyText">
+          <li>
+            <p>
+              The administration of the site reserves the right to change the
+              provisions of this privacy policy at any time.
+            </p>
+          </li>
+          <li>
+            <p>
+              If the user does not agree with the changes, the user undertakes
+              to immediately cease all interaction with the website.
+            </p>
+          </li>
+          <li>
+            <p>
+              The site shall not be liable for damages or losses incurred by the
+              user or third parties as a result of misunderstanding or
+              misunderstanding the provisions of the privacy policy.
+            </p>
+          </li>
+          <li>
+            <p>
+              The user, by entering his/her personal data or by providing this
+              data in any other way, or by performing actions on the website,
+              agrees to the privacy policy and authorises the website as well as
+              third party service providers to process his/her data.
+            </p>
+          </li>
+          <li>
+            <p>
+              Users may provide data themselves by posting on the website,
+              communicating via telephone channels or to an email or postal
+              address, or data may be provided from other sources, such as
+              feedback, ratings, comments, confirmations of information or other
+              information from third parties provided as part of a claim,
+              complaint or dispute, or information from publicly available
+              sources on the internet.
+            </p>
+          </li>
+          <li>
+            <p>
+              The user may not use the <span>sdproduction.org</span> website if
+              they do not agree to the terms of the privacy policy and must stop
+              using the website.
+            </p>
+          </li>
+          <li>
+            <p>
+              The user acknowledges that in case of his negligence in security
+              and protection of his data and data for authorisation, such as
+              password, login, third parties may gain unauthorised access to his
+              account and user data.
+              <span
+                >The site is not liable for damages caused by such access.</span
+              >
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
 
-    <footer class="desktop">
-      <img class="imageHero" src="../img/deviderLine.svg" alt="" />
-      <img class="logo" src="../img/logo.svg" alt="" />
-      <div class="footerInfo">
-        <ul class="navigator">
-          <li><a class="navigatorLink" href="#projects">Projects</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#ourTeam">Team</a></li>
-          <li><a href="#contentUs">Contact</a></li>
-        </ul>
-        <ul class="mediaInfo">
-          <li>Privacy Policy</li>
-          <li>© 2023 All rights reserved.</li>
-        </ul>
-      </div>
-    </footer>
-    <footer class="tablet">
-      <img class="logo" src="../img/logo.svg" alt="" />
-      <div class="footerInfo">
-        <ul class="navigator">
-          <!-- <li><a href="#projects">Projects</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#ourTeam">Team</a></li>
-          <li><a href="#contentUs">Contact</a></li> -->
-        </ul>
-        <ul class="mediaInfo">
-          <li>Privacy Policy</li>
-          <li>© 2023 All rights reserved.</li>
-        </ul>
-      </div>
-      <img class="backgroundFooter" src="../img/Ellipse.svg" alt="" />
-    </footer>
-    <footer class="mobile">
-      <img class="logo" src="../img/logo.svg" alt="" />
-      <div class="footerInfo">
-        <ul class="mediaInfo">
-          <li>Privacy Policy</li>
-          <li>© 2023 All rights reserved.</li>
-        </ul>
-      </div>
-      <img
-        class="mainImgMobile backgroundFooter"
-        src="../img/Ellipse.svg"
-        alt=""
-      />
-    </footer>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
     <script src="../js/organic/organic.js"></script>
