--- a/de/home.html
+++ b/de/home.html
@@ -1253,7 +1253,7 @@
           <li>
             <a href="../de/privacy.html" style="text-decoration: underline">Datenschutzrichtlinie</a>
           </li>
-          <li>© 2023 All rights reserved.</li>
+          <li>© 2023 Alle Rechte vorbehalten.li>
         </ul>
       </div>
     </footer>
