--- a/en/privacy.html
+++ b/en/privacy.html
@@ -52,9 +52,9 @@
             <li><a href="../en/home.html#contentUs">Contact</a></li> -->
             <li>
               <div class="HamburgerMenuContainerLanguage">
-                <button><a href="../en/organicShop.html">EN</a></button>
+                <button><a href="../en/privacy.html">EN</a></button>
                 <div></div>
-                <button><a href="../de/organicShop.html">DE</a></button>
+                <button><a href="../de/privacy.html">DE</a></button>
               </div>
             </li>
           </ul>
@@ -62,29 +62,34 @@
       </div>
     </header>
     <main>
+      <!-- Privacy Policy -->
+
       <section id="organicShop" style="margin-top: 2.5vw">
         <h3>Privacy <span class="borderText">Policy</span></h3>
         <ul class="privacyText">
           <li>
             <p>
-              <span>SD Production</span> (hereinafter "we", "us" or "our")
-              respects the privacy of users (hereinafter "you" or "user") and
-              makes every effort to protect the personal information you choose
-              to provide to us. This Privacy Policy describes our practices
-              regarding the collection, use and disclosure of your information
-              through your use of our websites, applications and services
-              (collectively, the "Services").
+              <span class="colorSpan">SD Production</span> (hereinafter
+              "<span>we</span>", "<span>us</span>" or "<span>our</span>")
+              respects the privacy of users (hereinafter "<span>you</span>" or
+              "<span>user</span>") and makes every effort to protect the
+              personal information you choose to provide to us. This Privacy
+              Policy describes our practices regarding the collection, use and
+              disclosure of your information through your use of our websites,
+              applications and services (collectively, the "<span>Data</span>").
             </p>
           </li>
           <li>
             <p>
-              <span>Data</span> is any information that is directly or
-              indirectly related to the users of the website.
+              <span class="colorSpan">Data</span> is any information that is
+              directly or indirectly related to the
+              <span>users of the website.</span>
             </p>
           </li>
         </ul>
       </section>
 
+      <!-- Personal Data -->
       <section id="organicShop">
         <h3>Personal <span class="borderText">Data</span></h3>
         <ul class="privacyText">
@@ -123,6 +128,9 @@
         </ul>
       </section>
 
+      <!-- Use of cookies and 
+           Other technology -->
+
       <section id="organicShop">
         <h3>
           Use of cookies and
@@ -134,17 +142,19 @@
         <ul class="privacyText">
           <li>
             <p>
-              <span>Cookies</span> or <span>cookies</span> are small pieces of
-              data that are sent to the user's computer when you visit a web
-              page or view an advertising module on a web page and are stored on
-              the user's computer or mobile device.
+              <span class="colorSpan">Cookies</span> or
+              <span class="colorSpan">cookies</span> are small pieces of data
+              that are sent to the user's computer when you visit a web page or
+              view an advertising module on a web page and are stored on the
+              user's computer or mobile device.
             </p>
           </li>
           <li>
             <p>
-              <span>Pixels</span> or <span>pixel tags</span> are digital images,
-              an element of the ad matrix that form the image. They can be used
-              to track how often a user uses a web page, to identify the user's
+              <span class="colorSpan">Pixels</span> or
+              <span class="colorSpan">pixel tags</span> are digital images, an
+              element of the ad matrix that form the image. They can be used to
+              track how often a user uses a web page, to identify the user's
               browser and provide services. For example, storing data in the
               shopping cart between visits, and preventing user-initiated
               website errors, with all information processed "as is" and not
@@ -153,6 +163,9 @@
           </li>
         </ul>
       </section>
+
+      <!-- Use and purposes of
+       Data processing -->
 
       <section id="organicShop">
         <h3>
@@ -167,13 +180,14 @@
             <p>
               The Website uses and processes data to perform the functions,
               powers and duties assigned to the Website in accordance with the
-              <span>current legislation of</span> <span>Ukraine</span> and to
-              ensure the realization of civil, economic and tax relations.
+              <span class="colorSpan">current legislation of</span>
+              <span class="colorSpan">Ukraine</span> and to ensure the
+              realization of civil, economic and tax relations.
             </p>
           </li>
           <li>
             <p>
-              <span
+              <span class="colorSpan"
                 >The website does not process data relating to race,
                 nationality, political opinions, religious and other beliefs or
                 membership of public associations. Information about the
@@ -188,13 +202,16 @@
               the basis of the purposes of data processing, as well as on the
               basis of the conditions established in the contracts concluded
               with users, in accordance
-              <span>
+              <span class="colorSpan">
                 with the requirements of the current legislation of Ukraine.
               </span>
             </p>
           </li>
         </ul>
       </section>
+
+      <!-- Use and purposes of
+       Data processing -->
 
       <section id="organicShop">
         <h3>
@@ -209,9 +226,9 @@
             <p>
               Data will not be transferred to third parties or disseminated
               without the consent of the user, except in cases provided for
-              <span>by applicable Ukrainian law</span> and only in the interests
-              of national security, economic well-being and human rights, in
-              particular but not exclusively:
+              <span class="colorSpan">by applicable Ukrainian law</span> and
+              only in the interests of national security, economic well-being
+              and human rights, in particular but not exclusively:
             </p>
           </li>
           <li>
@@ -222,7 +239,10 @@
             </p>
           </li>
           <li>
-            <div class="lineBeforeLi" style="margin-top: 1.3vw; width: 21px;"></div>
+            <div
+              class="lineBeforeLi"
+              style="margin-top: 1.3vw; width: 21px"
+            ></div>
             <p>
               In case the user, in the opinion of the site administration,
               violates the provisions of this policy or other contracts and
@@ -234,10 +254,12 @@
             <p>
               The website reserves the right to exchange data with state
               authorities in accordance with the requirements
-              <span>of the current legislation of Ukraine</span> to prevent
-              fraud on the website, settle disputes and clarify circumstances
-              that may lead to a violation of the current legislation of
-              Ukraine.
+              <span class="colorSpan"
+                >of the current legislation of Ukraine</span
+              >
+              to prevent fraud on the website, settle disputes and clarify
+              circumstances that may lead to a violation of the current
+              legislation of Ukraine.
             </p>
           </li>
         </ul>
@@ -317,9 +339,10 @@
           </li>
           <li>
             <p>
-              The user may not use the <span>sdproduction.org</span> website if
-              they do not agree to the terms of the privacy policy and must stop
-              using the website.
+              The user may not use the
+              <span class="colorSpan">sdproduction.org</span> website if they do
+              not agree to the terms of the privacy policy and must stop using
+              the website.
             </p>
           </li>
           <li>
@@ -328,7 +351,7 @@
               and protection of his data and data for authorisation, such as
               password, login, third parties may gain unauthorised access to his
               account and user data.
-              <span
+              <span class="colorSpan"
                 >The site is not liable for damages caused by such access.</span
               >
             </p>
