--- a/en/privacy.html
+++ b/en/privacy.html
@@ -95,15 +95,15 @@
         <ul class="privacyText">
           <li>
             <div class="lineBeforeLi"></div>
-            <p>Full name, phone number, e-mail address.</p>
+            <p class="before_text">Full name, phone number, e-mail address.</p>
           </li>
           <li>
             <div class="lineBeforeLi"></div>
-            <p>User information when contracting services on the website.</p>
+            <p class="before_text">User information when contracting services on the website.</p>
           </li>
           <li>
             <div class="lineBeforeLi"></div>
-            <p>
+            <p class="before_text">
               Data on devices and their use: IP address, time, date of use of
               the website by the user, software, as well as browser, operating
               system and other data revealed by the user.
@@ -111,7 +111,7 @@
           </li>
           <li>
             <div class="lineBeforeLi"></div>
-            <p>
+            <p class="before_text">
               Data from surveys related to improving the provision of services
               to users; information obtained by the website as a result of
               marketing activities.
@@ -119,7 +119,7 @@
           </li>
           <li>
             <div class="lineBeforeLi"></div>
-            <p>
+            <p class="before_text">
               Information posted by users based on the results of their service,
               feedback, comments, support requests, complaints, grievances and
               other inquiries.
